--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,13 +3,42 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   color: #666;
 }
-
 a {
   color: #00B7FF;
 }
-
 .flash-message {
   padding: 5px;
   border: 1px solid #666;
   cursor: pointer;
+}
+input, textarea {
+  display: block;
+  margin: 10px 0;
+  padding: 4px 6px;
+  border-radius: 3px;
+  border: 1px solid #aaa;
+  font-size: 16px;
+  width: 280px;
+  box-sizing: border-box;
+}
+
+input[type="submit"] {
+  border-radius: 6px;
+  border: 2px solid #00B7ff;
+  background: #fff;
+  color: #00B7ff;
+  cursor: pointer;
+}
+
+textarea {
+  height: 60px;
+}
+
+input#url, textarea {
+  font-size: 12px;
+  padding: 6px;
+}
+
+input::placeholder {
+  color: #bbb;
 }
