--- a/views/slips/new.pug
+++ b/views/slips/new.pug
@@ -5,9 +5,38 @@ block content
     a(href="/slips") Slips
 
   form#slip-new(method='POST', action='/slips/new')
-    label(for='email') Email
-    input#email(type='email', name='email')
-    label(for='password') Password
-    input#password(type='password', name='password')
-    input(type='submit')
+    label(for='language') Language
+    input#language(type='text', 
+                   name='language' 
+                   placeholder='javaScript')
 
+    label(for='sub_languages') Sub language (framework)
+    input#sub_language(type='text', 
+                   name='sub_languages',
+                   placeholder='node.js, react')
+
+    label(for='resource_title') Resource type
+    input#resource_type(type='text', 
+                        name='resource_type',
+                        placeholder='book')
+
+    label(for='resource_title') Resource title
+    input#resource_title(type='text', 
+                         name='resource_title',
+                         placeholder='Learning React Native')
+
+    label(for='description') Description
+    textarea#description(name='description')
+
+    label(for='url') Url
+    input#url(type='text', name='url')
+
+    label(for='minutes') Minutes
+    input#minutes(type='number', 
+                  name='minutes'
+                  placeholder='120')
+
+    label(for='date') Date
+    input#date(type='date', name='date')
+
+    input(type='submit')
