add better dummy data

--- a/views/slips/new.pug
+++ b/views/slips/new.pug
@@ -10,7 +10,7 @@ block content
                    name='language' 
                    placeholder='javaScript')
 
-    label(for='sub_languages') Sub language (framework)
+    label(for='sub_languages') Sub language (frameworks)
     input#sub_language(type='text', 
                    name='sub_languages',
                    placeholder='node.js, react')
