create login page styles and routes

--- a/views/users/login.pug
+++ b/views/users/login.pug
@@ -4,13 +4,14 @@ block content
   h1 
     a(href="/users") Users
 
-  h1 Sign up
+  h1 Login
 
-  form#user-new(method='POST', action='/users/new')
+  form#user-new(method='POST', action='/users/login')
     label(for='email') Email
     input#email(type='email', name='email')
     label(for='password') Password
     input#password(type='password', name='password')
     input(type='submit')
 
-    a(href="login") login
+    a(href="new") sign up
+
