--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,6 @@
+/* ************************************************** */
+/* main */
+/* ************************************************** */
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
@@ -41,4 +44,22 @@ input#url, textarea {
 
 input::placeholder {
   color: #bbb;
+}
+/* ************************************************** */
+/* index page */
+/* ************************************************** */
+
+.index {
+  width: 50%;
+  margin: 10% auto 0 auto;
+  text-align: center; 
+}
+
+.index h1, .index h4, .index input[type="submit"] {
+  padding: 10px;
+}
+
+.index input[type="submit"] {
+  width: 60%;
+  margin: 0 auto;
 }
