--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,11 @@
-extends layout
-
+extends layout 
 block content
-  h1= title
-  p Welcome to #{title}
+  .index
+    h1 Welcome to Tstory
+    h4 Track and show off the history of your hard work
+
+    form(method="GET" action="users/new")
+      input(type="submit" value="sign up") 
+
+    h4
+      a(href="users/login") login
