--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,11 +3,17 @@ html
   head
     title node Toy App
     meta(name='viewport', content='width=device-width')
-    script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js")
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    - if(message)
+    if(message)
       p.flash-message= message
+
+    if (error && error.length > 0)
+      br
+      h4.error-msg= error
+      br
+
     block content
+    script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js")
     script(src="/javascripts/common.js")
 
