--- a/views/users/edit.pug
+++ b/views/users/edit.pug
@@ -7,7 +7,7 @@ block content
   form(method='POST', action='/users/' + user._id)
     label(for='email') Email
     input(type='email', name='email' value=user.email)
-    label(for='password') Password
-    input(type='password' password='password' value=user.password)
+    label(for='new_password') New password
+    input(type='password' name='new_password')
     input(type='submit')
 
