--- a/views/users/home.pug
+++ b/views/users/home.pug
@@ -11,7 +11,12 @@ block content
     a(href="/users/new") sign up
   if (user)
     p You are currently logged in as #{ user.email }
-    a(href="/users/logout") Logout
+
+    p
+      a(href="/users/logout") Logout
   
     p
-      a(href="/users/" + user._id) #{user}
+      a(href="/users/" + user._id) profile
+
+    p
+      a(href="/users/" + user._id + "/slips/new") new slip
