--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -1,18 +1,14 @@
 extends ../layout
 
 block content
-  h1 
-    a(href="/users") Users
+  h1 All Users
 
-  h1= user
-
-  - if (users) {
-  ul
-    for user in users
-      a(href="/users/" + user._id) 
-        li= user
-  - }
-
+  if (users)
+    ul
+      for user in users
+        a(href="/users/" + user._id)
+          li= user.email + ' | ' + user.slipCount
+  
   a(href="/users/new") new user
 
 
