--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -7,7 +7,7 @@ block content
     ul
       for user in users
         a(href="/users/" + user._id)
-          li= user.email + ' | ' + user.slipCount
+          li= user.email + user.totalHours
   
   a(href="/users/new") new user
 
