--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,7 +7,7 @@ body {
   color: #666;
 }
 a {
-  color: #00B7FF;
+  color: #7bc7ff;
 }
 
 .flash-message {
@@ -53,9 +53,9 @@ input, textarea {
 }
 input[type="submit"] {
   border-radius: 6px;
-  border: 2px solid #00B7ff;
+  border: 2px solid #7bc7ff;
   background: #fff;
-  color: #00B7ff;
+  color: #7bc7ff;
   cursor: pointer;
 }
 textarea {
@@ -84,3 +84,64 @@ input::placeholder {
   width: 60%;
   margin: 0 auto;
 }
+/* ************************************************** */
+/* user show page */
+/* ************************************************** */
+
+/* #fff57b /1* yellow *1/ */
+/* #7bc7ff /1* blue *1/ */
+/* #ff7b85 /1* crimson *1/ */
+/* #c7ff7b /1* green *1/ */
+/* #ff7bc7 /1* pink *1/ */
+
+/* #ffef2f /1* yellow strong *1/ */
+/* #2fa7ff /1* blue strong *1/ */
+/* #ff2f3f /1* crimson strong *1/ */
+/* #a7ff2f /1* green strong *1/ */
+/* #ff2fa7 /1* pink strong *1/ */
+.show-page .time {
+  width: 180px;
+  display: inline-block;
+  font-size: 12px;
+}
+.show-page .tabs {
+  display: inline-block;
+  vertical-align: 10px;
+}
+.show-page .slip-wrapper {
+  border-top: 6px solid #eee;
+  padding-top: 6px;
+}
+.show-page a {
+  display: block;
+  padding-top: 10px;
+}
+.show-page p {
+  color: #555;
+  margin: 3px 0;
+}
+.show-page p.tab {
+  padding: 5px 5px 5px 8px;
+  margin-right: 14px;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  display: inline-block;
+}
+.show-page .language, 
+.show-page .sub-languages,
+.show-page .study-type {
+  border-left: 4px solid #888;
+}
+.show-page .language {
+  background-color: #c7ff7b;
+}
+.show-page .sub-languages {
+  background-color: #7bc7ff;
+}
+.show-page .study-type {
+  background-color: #ff7bc7;
+}
+
+
+
+
