--- a/views/users/show.pug
+++ b/views/users/show.pug
@@ -1,14 +1,27 @@
 extends ../layout
 
 block content
-  h1 
-    a(href="/users") Users
+  .show-page
+    h1 
+      a(href="/users") Users
 
-  if(user) 
-    p= user
+    if(user) 
+      h2= user.email
+      for slip in user.slips
+        .slip-wrapper
+          .time 
+            p hours - #{slip.totalHours}
+            p date  - #{slip.formatedDate}
+          .tabs
+            p.tab.language= slip.language
+            p.tab.sub-languages= slip.sub_languages
+            p.tab.study-type= slip.study_type
+          a(href=slip.url target="_blank")= slip.resource_title
+          p.tab= slip.discription
 
-    a(href="/users/edit/" + user._id) edit
-    form(method="Post" action="/users/delete/" + user._id) 
-      button(type="submit") delete
 
-    
+      a(href="/users/edit/" + user._id) edit
+      form(method="Post" action="/users/delete/" + user._id) 
+        button(type="submit") delete
+
+      
