--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,21 +4,40 @@ html
     title node Toy App
     meta(name='viewport', content='width=device-width')
     link(rel='stylesheet', href='/stylesheets/style.css')
-  body
-    
-    if(successMessage)
-      .flash-message 
-        p.success-message= successMessage
 
-    if(errorMessage)
-      .flash-message 
-        p.error-message= errorMessage
+  nav
+    h1 
+      a(href="/users") Tstory
 
-    if(infoMessage)
-      .flash-message 
-        p.info-message= infoMessage
+    if(login)
+      h4
+        a(href="/users/logout") Logout
+      if(user)
+        h4
+          a(href="/users/" + user._id) Profile
+        h4
+          a(href="/users/slips") Create
+    if(!login)
+      h4
+        a(href="/users/login") Login
+      h4
+        a(href="/users/new") Signup
 
-    block content
-    script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js")
-    script(src="/javascripts/common.js")
+  main
+    body
+      if(successMessage)
+        .flash-message 
+          p.success-message= successMessage
+
+      if(errorMessage)
+        .flash-message 
+          p.error-message= errorMessage
+
+      if(infoMessage)
+        .flash-message 
+          p.info-message= infoMessage
+
+      block content
+      script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js")
+      script(src="/javascripts/common.js")
 
