--- a/views/slips/index.pug
+++ b/views/slips/index.pug
@@ -7,12 +7,8 @@ block content
   h1 
     a(href="/slips") Slips
 
-  - if (slips) {
-  ul
-    for slip in slips
-      a(href="/slips/" + slip._id) 
-        li= slip
-  - }
-
-
-
+  if (slips)
+    ul
+      for slip in slips
+        a(href="/slips/" + slip._id) 
+          li= slip
