--- a/views/slips/edit.pug
+++ b/views/slips/edit.pug
@@ -1,47 +1,48 @@
 extends ../layout
 
 block content
-  h1 
-    a(href="/slips") Time Slip
+  .form-wrapper
+    h1 
+      a(href="/slips") Time Slip
 
-  form#slip-new(method='POST', action='/slips/' + slip._id)
-    label(for='language') Language
-    input#language(type='text', 
-                   name='language',
-                   value=slip.language)
+    form#slip-new(method='POST', action='/slips/' + slip._id)
+      label(for='language') Language
+      input#language(type='text', 
+                     name='language',
+                     value=slip.language)
 
-    label(for='sub_languages') Sub language (framework)
-    input#sub_language(type='text', 
-                       name='sub_languages',
-                       value=slip.sub_language)
+      label(for='sub_languages') Sub language (framework)
+      input#sub_language(type='text', 
+                         name='sub_languages',
+                         value=slip.sub_language)
 
-    label(for='resource_title') Resource type
-    input#resource_type(type='text', 
-                        name='resource_type',
-                        value=slip.resource_type)
+      label(for='resource_title') Resource type
+      input#resource_type(type='text', 
+                          name='resource_type',
+                          value=slip.resource_type)
 
-    label(for='resource_title') Resource title
-    input#resource_title(type='text', 
-                         name='resource_title',
-                         value=slip.resource_title)
+      label(for='resource_title') Resource title
+      input#resource_title(type='text', 
+                           name='resource_title',
+                           value=slip.resource_title)
 
-    label(for='description') Description
-    textarea#description(name='description') #{slip.description}
+      label(for='description') Description
+      textarea#description(name='description') #{slip.description}
 
-    label(for='url') Url
-    input#url(type='text', 
-              name='url'
-              value=slip.url)
+      label(for='url') Url
+      input#url(type='text', 
+                name='url'
+                value=slip.url)
 
-    label(for='minutes') Minutes
-    input#minutes(type='number', 
-                  name='minutes'
-                  value=slip.minutes)
+      label(for='minutes') Minutes
+      input#minutes(type='number', 
+                    name='minutes'
+                    value=slip.minutes)
 
-    label(for='date') Date
-    input#date(type='date', 
-               name='date',
-               value=slip.date)
+      label(for='date') Date
+      input#date(type='date', 
+                 name='date',
+                 value=slip.date)
 
-    input(type='submit')
+      input(type='submit')
 
