--- a/views/slips/new.pug
+++ b/views/slips/new.pug
@@ -1,42 +1,43 @@
 extends ../layout
 
 block content
-  h1 
-    a(href="/slips") Slips
+  .form-wrapper
+    h2 New slip
 
-  form#slip-new(method='POST', action='/users/' + userId + '/slips/new')
-    label(for='language') Language
-    input#language(type='text', 
-                   name='language' 
-                   placeholder='javaScript')
+    form#slip-new(method='POST', 
+      action='/users/' + userId + '/slips/new')
+      label(for='language') Language
+      input#language(type='text', 
+                     name='language' 
+                     placeholder='javaScript')
 
-    label(for='sub_languages') Sub language (frameworks)
-    input#sub_language(type='text', 
-                   name='sub_languages',
-                   placeholder='node.js, react')
+      label(for='sub_languages') Sub language (frameworks)
+      input#sub_language(type='text', 
+                     name='sub_languages',
+                     placeholder='node.js, react')
 
-    label(for='study_type') Resource type
-    input#study_type(type='text', 
-                        name='study_type',
-                        placeholder='book')
+      label(for='study_type') Resource type
+      input#study_type(type='text', 
+                          name='study_type',
+                          placeholder='book')
 
-    label(for='resource_title') Resource title
-    input#resource_title(type='text', 
-                         name='resource_title',
-                         placeholder='Learning React Native')
+      label(for='resource_title') Resource title
+      input#resource_title(type='text', 
+                           name='resource_title',
+                           placeholder='Learning React Native')
 
-    label(for='description') Description
-    textarea#description(name='description')
+      label(for='description') Description
+      textarea#description(name='description')
 
-    label(for='url') Url
-    input#url(type='text', name='url')
+      label(for='url') Url
+      input#url(type='text', name='url')
 
-    label(for='minutes') Minutes
-    input#minutes(type='number', 
-                  name='minutes'
-                  placeholder='120')
+      label(for='minutes') Minutes
+      input#minutes(type='number', 
+                    name='minutes'
+                    placeholder='120')
 
-    label(for='date') Date
-    input#date(type='date', name='date')
+      label(for='date') Date
+      input#date(type='date', name='date')
 
-    input(type='submit')
+      input(type='submit')
