--- a/views/users/update_password.pug
+++ b/views/users/update_password.pug
@@ -1,13 +1,11 @@
 extends ../layout
 
 block content
-  h1 
-    a(href="/users") Users
-
-  form(method='POST', action='/users/update_password')
-    input(type='hidden', name='email' value=user.email)
-    label(for='password') New Password
-    input(type='password', name='password')
-    input(type='submit')
+  .form-wrapper
+    form(method='POST', action='/users/update_password')
+      input(type='hidden', name='email' value=user.email)
+      label(for='password') New Password
+      input(type='password', name='password')
+      input(type='submit')
 
 
