fix external lin bug

--- a/views/users/show.pug
+++ b/views/users/show.pug
@@ -26,8 +26,8 @@ block content
             p.tab.language= slip.language
             p.tab.sub-languages= slip.sub_languages
             p.tab.study-type= slip.study_type
-          a(href='/' + slip.url target="_blank")= slip.resource_title
-          p= slip.description
+        a(href=slip.url target="_blank")= slip.resource_title
+        p= slip.description
 
 
       
