--- a/views/users/show.pug
+++ b/views/users/show.pug
@@ -19,9 +19,9 @@ block content
               p hours - #{slip.totalHours}
               p date  - #{slip.formatedDate}
             .icons
-              if(login)
-                span.edit
-                span.trash
+              // if(login)
+              //   span.edit
+              //   span.trash
           .tabs
             p.tab.language= slip.language
             p.tab.sub-languages= slip.sub_languages
