--- a/views/users/home.pug
+++ b/views/users/home.pug
@@ -5,5 +5,11 @@ block content
   h4 Track and show off the history of your hard work
 
   a(href="/users") 
-    h4 look around
+    h4.share.padding20 look around
+
+  a(href="/users/login") 
+    h4.share.padding20 login
+
+  a(href="/users/new") 
+    h4.share.padding20 Signup
 
